--- a/src/pages/Resume.css
+++ b/src/pages/Resume.css
@@ -36,6 +36,11 @@
     margin-bottom: 20px;
   }
 
+  .resume-item:hover {
+    transform: scale(1.02);
+    transition: 0.3s;
+  }
+
   .resume-item a{
     text-decoration: none;
   }
@@ -95,7 +100,7 @@
 .resumeButton:hover {
     transform: scale(1.1);
     font-size: 1.05rem;
-    transition: 0.5s;
+    transition: 0.3s;
     box-shadow: 0px 0px 10px 0px #74B3CE;
 }
 
